objects/PAYBASE2__Payment_Refund_Record_Type__c.object
<CustomObject>
    <description>Used to map a payment record type to the required refund record type.  

You should not edit the contents unless instructed to by Payonomy, or you could render the application unusable</description>
    <fields>
        <fullName>PAYBASE2__Payment_Record_Type__c</fullName>
        <description>Record type for the payment record</description>
        <label>Payment Record Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Payment_Required_For_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true, then a refund with this record type cannot be created without a related payment, otherwise a refund can exist in isolation.
For example a credit card refund can only exist with a related credit card payment.  However, a direct credit can exist without a direct debit</description>
        <label>Payment Required For Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Refund_Record_Type__c</fullName>
        <description>Record type for the refund record</description>
        <label>Refund Record Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Payonomy Payment Refund Record Type</label>
    <nameField>
        <label>Payonomy Payment Refund Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payonomy Payment Refund Record Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>